# AutoDice

./: Cargo.toml  README.md
.github/workflows/: clippy.yml  pages.yml
assets/: autodicetable.gltf
assets/shaders/: dice.wgsl
src/: constants.rs  main.rs  pigs.rs  player.rs  states.rs  ui.rs
src/battle/: challenge.rs  debug_control.rs  dice.rs  dice_collector.rs  floating_text.rs  mod.rs  plugin.rs  scene.rs  sequence.rs
src/camera/: battle_camera.rs  menu_camera.rs  mod.rs  plugin.rs  tooltip_camera.rs
src/dice/: animation.rs  dice_collector.rs  dice_info_bar.rs  dice_instance.rs  dice_render.rs  dice_template.rs  events.rs  face.rs  health_bar.rs  mod.rs  plugin.rs  roll.rs
src/dice/action/: attack.rs  double.rs  fire.rs  mod.rs  regenerate.rs
src/dice/action/helpers/: delayed.rs  mod.rs  select_targets.rs  try_all.rs
src/dice/action/interaction/: dice.rs
src/dice/background/: mod.rs
src/dice/status/: burning.rs  double.rs  mod.rs  plugin.rs  regeneration.rs
src/dice/synergy/: fiery.rs  mod.rs  plugin.rs
src/examples/: ss.rs
src/loading_screen/: mod.rs
src/manage/: dice_grid.rs  mod.rs  plugin.rs  tile.rs
src/menu/: plugin.rs
src/utils/: mod.rs  tooltip.rs
web/: index.html
