[package]
name = "AutoDice"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] } 
bevy-inspector-egui = "0.24.0"
bevy_xpbd_3d = "0.4"
rand = "0.8.5"
rand_distr = "0.4.3"
