[package]
name = "AutoDice"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking"] } 
bevy-inspector-egui = "0.29.1"
avian3d = "0.2"
profiling = { version = "1.0.16", features = ["type-check"], default-features = false }
rand = "0.8.5"
rand_distr = "0.4.3"
