[package]
name = "AutoDice"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.16", features = ["dynamic_linking"] } 
bevy-inspector-egui = "0.31"
avian3d = "0.3"
profiling = { version = "1.0.16", features = ["type-check"], default-features = false }
rand = "0.8.5"
rand_distr = "0.4.3"
tokio = { version = "1.45.1", features = ["time"] }
bevy_defer = "0.14"
futures_ = { package = "futures", version = "0.3.31" }
